objet rangement terminé mais manque un truc pour éviter les répétitions, fonction comparaison faite et fonctionnel

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         </div>
         <section id="reponse">
           <div class="signe">
-
+            <h3 class="reponseSigne" onclick="comparaison(0)"></h3>
           </div>
           <div class="signe">
-
+            <h3 class="reponseSigne" onclick="comparaison(1)"></h3>
           </div>
           <div class="signe">
-
+            <h3 class="reponseSigne" onclick="comparaison(2)"></h3>
           </div>
           <div class="signe">
-
+            <h3 class="reponseSigne" onclick="comparaison(3)"></h3>
           </div>
         </section>
       </section>
