fonction pour corriger le dédoublement terminé, css mis à jour

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body onload="chargementTableau()">
+      <header>
+        <h1>Apprentissage Alphabet Japonais</h1>
+        <i>par baptiste ventura</i>
+      </header>
       <section id="interface">
         <div id="question">
           <img id="imgQuestion" src="" alt="">
