--- a/katakana.html
+++ b/katakana.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Apprentissage Hiragana</title>
+        <title>Apprentissage Katakana</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,21 +15,36 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body>
+    <body onload="chargementTableau()">
       <header>
         <h1>Apprentissage Alphabet Japonais</h1>
         <i>par baptiste ventura</i>
       </header>
-      <main>
-        <h2><a href="hiragana.html">Apprentissage Hiragana</a></h2>
-        <h2><a href="katakana.html">Apprentissage Katakana</a></h2>
-      </main>
+      <section id="interface">
+        <div id="question">
+          <img id="imgQuestion" src="" alt="">
+        </div>
+        <section id="reponse">
+          <div class="signe">
+            <h3 class="reponseSigne" onclick="comparaison(0)"></h3>
+          </div>
+          <div class="signe">
+            <h3 class="reponseSigne" onclick="comparaison(1)"></h3>
+          </div>
+          <div class="signe">
+            <h3 class="reponseSigne" onclick="comparaison(2)"></h3>
+          </div>
+          <div class="signe">
+            <h3 class="reponseSigne" onclick="comparaison(3)"></h3>
+          </div>
+        </section>
+      </section>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <script src="../../jquery-3.2.1.js"></script>
-        <script src="js/apprentissageObjet.js"> </script>
+        <script src="js/katakana.js"> </script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
