bootstrap4 added, LatinHiragana done, hiragana latin update

--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
         <i>par baptiste ventura</i>
       </header>
       <main>
-        <h2><a href="hiragana.html">Apprentissage Hiragana</a></h2>
+        <h2><a href="hiragana.html">Apprentissage Hiragana-Latin</a></h2>
         <h2><a href="katakana.html">Apprentissage Katakana</a></h2>
+        <h2> <a href="latinHiragana.html">Apprentissage Latin/Hiragana</a></h2>
+        <h2> <a href="Latinkatakana.html">Apprentissage Latin/Katakana</a></h2>
       </main>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <script src="../../jquery-3.2.1.js"></script>
-        <script src="js/apprentissageObjet.js"> </script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
