--- a/hiragana.html
+++ b/hiragana.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Apprentissage Hiragana</title>
+        <title>Hiragana-Latin</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="stylesheet" href="bootstrap4/css/bootstrap.css">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
@@ -16,13 +16,18 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body onload="chargementTableau()">
+      <div id='fin'>
+        <p id='affichage'></p>
+        <form class="" action="index.html" method="post">
+          <input type="submit" name="" value="retour">
+        </form>
+      </div>
       <header>
-        <h1>Apprentissage Alphabet Japonais</h1>
-        <i>par baptiste ventura</i>
+        <p>progression :</p> <p id='point'></p>
       </header>
       <section id="interface">
         <div id="question">
-          <img id="imgQuestion" src="" alt="">
+          <img class='col-6' id="imgQuestion" src="" alt="">
         </div>
         <section id="reponse">
           <div class="signe">
@@ -39,6 +44,11 @@
           </div>
         </section>
       </section>
+      <footer>
+        <form class="mb-5" action="index.html" method="post">
+          <input type="submit" name="" value="retour index">
+        </form>
+      </footer>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
